--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -281,7 +281,7 @@ un solo MTA.
 Microsoft ha fornito mediante DCOM tantissimi strumenti, in grado di risolvere
 i problemi sempre più nell'ottica di un moderno mw.
 In particolare, si possono citare MSMQ per realizzare un sistema a scambio di
-messaggi, e COM+ per permettere la denizione di componenti solo attraverso
+messaggi, e COM+ per permettere la definizione di componenti solo attraverso
 la parte logica. Presenta anche un servizio X.500 di directory standard, detto
 Active Directory.
 78
