--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -8,14 +8,14 @@ Un mw deve avere oggetti remoti, invocabili da diversi client su diverse macchin
 quindi in grado di ottenere tutti i servizi
 conosciuti da parte del client. Si ha quindi una forte idea di razionalizzazione,
 l'obiettivo è superare tutti i problemi dell'eterogeneità (in CORBA: supporto
-per linguaggi ed ambienti diversi, denizione di interfacce per servizi e supporti
+per linguaggi ed ambienti diversi, definizione di interfacce per servizi e supporti
 per gli oggetti, . . . ).
 CORBA in particolare basala sua architettura sulla presenza di un broker,
 detto Object Request Broker : è infatti l'incarnazione di tutta l'architettura,
 perché fornisce il supporto alla comunicazione, il controllo degli oggetti, facilita
 la comunicazione, ed alloca gli oggetti. . . ), ovvero è il bus per l'interconnese
 sione!26 Una caratteristica importante degli ORB è che è prevista la possibilità
-di coordinarli, grazie alla denizione di uno standard preciso (non dipende quindi dalle varie implementazioni!). In
+di coordinarli, grazie alla definizione di uno standard preciso (non dipende quindi dalle varie implementazioni!). In
 questo modo, tutti i servizi riconosciuti da
 un ORB saranno riconosciuti da un altro, magari introdotto in un secondo
 momento27
@@ -252,7 +252,7 @@ l'esecuzione!
 Inizialmente si aveva i BOA: questi erano legati a poche interfacce, e ad un
 unico ambiente di linguaggio. I POA sono un'estensione, aggiungendo funzionalità, potendo interagire con servant dotati
 di interfacce e linguaggi diversi: da
-qui la denizione di portable! Non abbiamo infatti una chiara indicazione della
+qui la definizione di portable! Non abbiamo infatti una chiara indicazione della
 sua locazione.
 CORBA è stato il primo standard che ha cercato di realizzare un sistema
 mw per gli oggetti attivi: un riferimento è quindi in grado di puntare potenziale
